:recycle: added authorization_type to adapters
